removed overflow hidden from main to fix scrollling issue

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    
 }
 
 body {
@@ -124,7 +125,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    height: 100%;
 }
 
 @media (min-width: 1600px) {
@@ -213,7 +214,7 @@ main section {
     background-attachment: fixed;
     background-size: contain;
     background-position: center;
-    overflow: hidden;
+
 }
 
 .dobra1-titulo {
@@ -880,7 +881,7 @@ h5 {
 footer {
     background-color: #da3026;
     border: 1px solid #da3026;
-    height: 100%;
+    height: 30px;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -918,7 +919,7 @@ footer p {
     padding: 50px;
     text-align: center;
     position: relative;
-    overflow: hidden;
+
     z-index: 5;
     background-image: url('images/jean-philippe-delberghe-75xPHEQBmvA-unsplash.jpg');
     background-blend-mode: multiply;
@@ -1057,3 +1058,4 @@ footer p {
 	list-style-type: none;
     z-index: 100;
 }
+
